Победил ошибку с kapt